Address #276 and provide fink install instructions.

--- a/index/_posts/1970-06-01-get_tidy.md
+++ b/index/_posts/1970-06-01-get_tidy.md
@@ -29,7 +29,7 @@ in adopting [**cmake**][11]. **Tidy**’s source code is available on its
 
 ### Mac OS X
 
-- [Fink][21]: coming soon.
+- [Fink][21]: `fink install tidy`
 - [Homebrew][20]: `brew install tidy-html5`
 - [MacPorts][22]: `sudo port install tidy`
 
