Ready site for 5.4.0 release.

--- a/homepage/_posts/1970-01-01-htmltidy.md
+++ b/homepage/_posts/1970-01-01-htmltidy.md
@@ -38,10 +38,10 @@ fa-icon:
     <div>
         <h2>Tidy gets out</h2>
         <p>
-            <em>Last</em> release <a href="https://github.com/htacg/tidy-html5/releases/tag/5.2.0">5.2.0</a>, Apr. 2016.
-            If you want the latest, get the <em>master</em> branch of our 
-            <a href="https://github.com/htacg/tidy-html5" title="tidy-html5">tidy-html5</a> repository.
-            <em>First</em> release <a href="https://github.com/htacg/tidy-html5/releases/tag/5.0.0">5.0.0</a>, Sep. 2015. 
+            <em>Newest</em> official release <a href="https://github.com/htacg/tidy-html5/releases/tag/5.4.0">5.4.0</a>, March 2017.
+            If you want the latest official, get the <em>master</em> branch of our 
+            <a href="https://github.com/htacg/tidy-html5" title="tidy-html5">tidy-html5</a> repository,
+            and if you like life on the bleeding edge, be sure to check out <em>next</em>.
         </p>
     </div>
 
