--- a/homepage/_posts/1970-06-01-get_tidy.md
+++ b/homepage/_posts/1970-06-01-get_tidy.md
@@ -21,7 +21,7 @@ a few more options.
 ## Build from source
 
 Building **Tidy** from source is easier than ever thanks to the efforts of our developers
-in adopting [**cmake**][11]. **Tidy**’s source code is available on its
+in adopting [**CMake**][11]. **Tidy**’s source code is available on its
 [github repository][1].
 
 
