--- a/homepage/_posts/1970-07-01-tidy_plus.md
+++ b/homepage/_posts/1970-07-01-tidy_plus.md
@@ -30,6 +30,10 @@ child nodes, and a pretty print output. This is a list of just a few application
   
 - [Notepad++][40] is a powerful editor, and several people offer a plugin that uses **`libtidy`** 
   to do cleaning, indenting, etc. Some version incompatibilites have been noted.
+  
+- [Balthisar Tidy][42] is a free, full fledged text editor for **macOS** that
+  encourages you to tidy your documents live, during editing.
+   
 
 There are also applications that use the tidy console executable externally to add 
 html cleaning.
@@ -62,3 +66,4 @@ add it. You will want to edit [this file][2].
 [node-libtidy]: https://github.com/gagern/node-libtidy
 [41]: https://www.htmlvalidator.com/
 
+[42]: http://www.balthisar.com/software/tidy/
