Add Debian installation instructions.

--- a/homepage/_posts/1970-06-01-get_tidy.md
+++ b/homepage/_posts/1970-06-01-get_tidy.md
@@ -40,7 +40,7 @@ Coming soon!
 
 ### Linux
 
-Coming soon!
+- [Debian][30]: `sudo apt install tidy`
 
 
 [1]: https://github.com/htacg/tidy-html5
@@ -55,3 +55,4 @@ Coming soon!
 [21]: http://www.finkproject.org/
 [22]: https://www.macports.org/
 
+[30]: http://www.debian.org/
