Improve 'list' sample

--- a/documentation/_posts/2000-02-01-part_what.md
+++ b/documentation/_posts/2000-02-01-part_what.md
@@ -95,6 +95,7 @@ Here are a few examples:
 
   ~~~
   <body>
+  <ul>
   <li>1st list item
   <li>2nd list item
   ~~~
@@ -108,6 +109,9 @@ Here are a few examples:
   <li>2nd list item</li>
   </ul>
   ~~~
+  
+  Note Tidy will warn about the missing ul close tag, but not about 
+  the optional li close tag.
 
 - Missing quotation marks around attribute values
 
