Included chocolatey package information.

--- a/homepage/_posts/1970-06-01-get_tidy.md
+++ b/homepage/_posts/1970-06-01-get_tidy.md
@@ -36,11 +36,11 @@ in adopting [**CMake**][11]. **Tidy**’s source code is available on its
 
 ### Windows
 
-Coming soon!
+- [Chocolatey][30]: `choco install html-tidy`
 
 ### Linux
 
-- [Debian][30]: `sudo apt install tidy`
+- [Debian][40]: `sudo apt install tidy`
 
 
 [1]: https://github.com/htacg/tidy-html5
@@ -55,4 +55,6 @@ Coming soon!
 [21]: http://www.finkproject.org/
 [22]: https://www.macports.org/
 
-[30]: http://www.debian.org/
+[30]: https://chocolatey.org/
+
+[40]: http://www.debian.org/
