Add installation instruction of the snap package
Signed-off-by: 林博仁(Buo-ren, Lin) <Buo.Ren.Lin@gmail.com>

--- a/homepage/_posts/1970-06-01-get_tidy.md
+++ b/homepage/_posts/1970-06-01-get_tidy.md
@@ -41,6 +41,7 @@ Coming soon!
 ### Linux
 
 - [Debian][30]: `sudo apt install tidy`
+- [Snap][31]: `sudo snap install tidy`
 
 
 [1]: https://github.com/htacg/tidy-html5
@@ -56,3 +57,4 @@ Coming soon!
 [22]: https://www.macports.org/
 
 [30]: http://www.debian.org/
+[31]: https://snapcraft.io/
